Linked Github page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
         <p>
           This project was coded by
           <a href="https://github.com/zoiyaj" target="_blank">Zoiya Jesani</a>
-          and is <a href="#" target="_blank"> on GitHub</a> and
+          and is
+          <a href="https://github.com/zoiyaj/Ops-Challenge" target="_blank">
+            on GitHub</a
+          >
+          and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
       </footer>
