--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>My weather application</title>
   </head>
   <body>
@@ -58,5 +58,5 @@
       </footer>
     </div>
   </body>
-  <script src="src/index.js"></script>
+  <script src="index.js"></script>
 </html>
