Correct Netifly link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             on GitHub</a
           >
           and
-          <a href="lustrous-sunburst-9e602d.netlify.app" target="_blank"
+          <a href="http://lustrous-sunburst-9e602d.netlify.app" target="_blank"
             >hosted on Netlify</a
           >
         </p>
