Added conditions & wind

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
               <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              Humidity: <span id="currentHumidity"><strong>87%</strong></span
+              >, Wind: <span id="currentWind"><strong>7.2km/h</strong></span>
             </p>
           </div>
           <div class="current-temperature">
