--- a/index.html
+++ b/index.html
@@ -50,11 +50,14 @@
           This project was coded by
           <a href="https://github.com/zoiyaj" target="_blank">Zoiya Jesani</a>
           and is
-          <a href="https://github.com/zoiyaj/Ops-Challenge" target="_blank">
+          <a
+            href="https://github.com/zoiyaj/Vanilla-Weather-Search"
+            target="_blank"
+          >
             on GitHub</a
           >
           and
-          <a href="http://lustrous-sunburst-9e602d.netlify.app" target="_blank"
+          <a href="https://lustrous-sunburst-9e602d.netlify.app" target="_blank"
             >hosted on Netlify</a
           >
         </p>
